sync changes